# stable-audio-studio

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
electron/main/: auto-updater.ts  index.ts  ipc-handlers.ts  python-bridge.ts
electron/preload/: index.ts
python/: pyproject.toml  requirements.txt
python/server/: __init__.py  main.py
python/server/models/: __init__.py
python/server/routes/: audio.py  generation.py  model.py
python/server/services/: audio_service.py  model_service.py
python/tests/: smoke_test.py  test_e2e_generation.py
resources/nsis/: uninstaller.nsh
scripts/: crop-logo.py  generate-samples.py  make-header.py  make-ico.py  remove-white-bg.py  screenshots.e2e.ts
shared/: types.ts
src/: App.tsx
src/components/AudioGenerator/: GeneratorView.tsx
src/components/AudioLibrary/: LibraryView.tsx
src/components/Layout/: Sidebar.tsx
src/components/Settings/: SettingsView.tsx
src/components/WaveformEditor/: EditorView.tsx
src/components/shared/: ExportDialog.tsx  Toast.tsx  WaveformPlayer.tsx
src/contexts/: AudioContext.tsx
src/styles/: globals.css
src/types/: assets.d.ts  electron.d.ts  sql.js.d.ts
tests/: electron.e2e.ts
