[project]
name = "stable-audio-studio-backend"
version = "0.1.0"
description = "Python backend for Stable Audio Studio"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "diffusers>=0.30.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "torchsde>=0.2.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.26.0",
]
